--- a/Resources/public/paella/player/resources/style/style_dark.css
+++ b/Resources/public/paella/player/resources/style/style_dark.css
@@ -18,10 +18,11 @@ a:active {
 a:visited {
   color: #636363;
 }
-.video {
+video {
   -moz-box-shadow: 2px 2px 6px #000;
   -webkit-box-shadow: 2px 2px 6px #000;
   box-shadow: 2px 2px 6px #000;
+  background: black;
 }
 div {
   -webkit-touch-callout: none;
