--- a/Resources/public/paella/player/resources/style/style_dark_old.css
+++ b/Resources/public/paella/player/resources/style/style_dark_old.css
@@ -5,6 +5,7 @@ body {
   font-family: Verdana, sans-serif;
   font-size: 12px;
   background: #fafafa;
+  touch-action: none;
 }
 a {
   color: #636363;
@@ -18,7 +19,7 @@ a:active {
 a:visited {
   color: #636363;
 }
-video {
+.videoWrapper {
   -moz-box-shadow: 2px 2px 6px #000;
   -webkit-box-shadow: 2px 2px 6px #000;
   box-shadow: 2px 2px 6px #000;
@@ -34,6 +35,9 @@ div {
 }
 #playerContainer {
   background-color: white;
+}
+#playerContainer.modalVisible > :not(.modalMessageContainer) {
+  filter: blur(10px);
 }
 #playerContainer:-webkit-full-screen {
   width: 100%;
@@ -291,7 +295,9 @@ div {
   z-index: 100;
   position: absolute;
   right: 0px;
+  left: 0px;
   top: 0px;
+  pointer-events: none;
 }
 .divTimeOverlay {
   position: fixed;
@@ -550,12 +556,6 @@ a.btn {
   margin-bottom: -3px;
   margin-right: 2px;
 }
-.buttonPlugin.flexSkip_Rewind_10 {
-  background-position: -205% 22%;
-}
-.buttonPlugin.flexSkip_Forward_30 {
-  background-position: -200% 22%;
-}
 .buttonPlugin.playlistPlugin {
   background-position: -89.5% -89%;
 }
@@ -585,6 +585,12 @@ a.btn {
   font-weight: bold;
   padding-left: 15px;
 }
+.buttonPlugin.flexSkip_Rewind_10 {
+  background-position: -205% 22%;
+}
+.buttonPlugin.flexSkip_Forward_30 {
+  background-position: -200% 22%;
+}
 .textAnnotation {
   background-color: rgba(128, 128, 128, 0.7);
   text-align: center;
@@ -602,6 +608,23 @@ a.btn {
 .buttonPlugin.arrowSlideNavidator.prevButton {
   background-position: -1600% -100%;
   pointer-events: all !important;
+}
+.buttonPlugin.audioLanguages {
+  text-align: center;
+  background-position: -900% -200%;
+  font-size: 0.8em;
+  line-height: 40px;
+  color: white;
+  text-transform: uppercase;
+}
+.videoAudioTrackItem {
+  padding: 10px;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.videoAudioTrackItem:hover {
+  background-color: #cc0000;
 }
 .blackBoardDiv {
   position: absolute;
@@ -1413,6 +1436,128 @@ svg rect {
 	position:absolute;
 	left: 0px;
 */
+}
+.buttonPlugin.left.videoData {
+  height: auto;
+  width: 100%;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.buttonPlugin.left.videoData h1 {
+  color: white;
+  padding: 0px 0px 0px 20px;
+  margin: 0px;
+}
+@media (max-width: 400px) {
+  .buttonPlugin.left.videoData h1 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+@media (min-width: 401px) and (max-width: 800px) {
+  .buttonPlugin.left.videoData h1 {
+    font-size: 20px;
+    line-height: 34px;
+  }
+}
+@media (min-width: 801px) {
+  .buttonPlugin.left.videoData h1 {
+    font-size: 30px;
+    line-height: 44px;
+  }
+}
+.buttonPlugin.right.videoZoom {
+  width: 200px;
+  background-image: none;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  text-align: right;
+}
+.buttonPlugin.right.videoZoom:hover {
+  background-color: transparent !important;
+}
+.buttonPlugin.right.videoZoom:active {
+  background-color: transparent !important;
+}
+.zoom-thumbnail {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+}
+.zoom-container {
+  width: 160px;
+  height: 90px;
+  margin: 5px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 3px 0px black;
+  border-radius: 2px;
+  position: relative;
+}
+.zoom-rect {
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border: 1px solid #0e0e0e;
+}
+.videoWrapper {
+  display: flex;
+  justify-content: center;
+}
+.videoZoomButton {
+  z-index: 1;
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-top: 4px;
+  opacity: 0.2;
+  background: white;
+  font-size: 2em;
+  padding: 0px 4px 0px 4px;
+  box-shadow: 2px 2px 5px 0px black;
+  width: 30px;
+  height: 30px;
+  flex-direction: row-reverse;
+}
+.videoZoomButton:hover {
+  opacity: 0.999;
+}
+.videoZoomButton:active {
+  opacity: 0.999;
+}
+@media (max-width: 600px) {
+  .buttonPlugin.right.videoZoom {
+    width: 50px;
+  }
+  .zoom-container {
+    width: 80px;
+    height: 45px;
+  }
+}
+@media (max-width: 800px) and (min-width: 601px) {
+  .buttonPlugin.right.videoZoom {
+    width: 100px;
+  }
+  .zoom-container {
+    width: 120px;
+    height: 68px;
+  }
+}
+.buttonPlugin.videoZoomToolbar {
+  background-position: -700% -100%;
+}
+.videoZoomToolbarItem {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  font-size: 20px;
 }
 .buttonPluginPopUp.showViewModeButton {
   background-image: none;
